@startuml
hide circle

entity "Genomic Island" as gi {
    id : int <<generated>>
    --
    name : text !null unique
    role : text
}

entity "Genomic Island Type" as gi_type {
		--
		gi : int !null <<FK>>
		type : text !null
}

entity "Alternate Names"  as an {
		--
		gi : int !null <<FK>>
		name : text !null
}

entity "Sequence" as seq {
    id : int <<generated>>
    --
    gi : int !null <<FK>>
    gbuid : text unique
    start : int
    end : int
    gc : float
		length : int
    path : text unique
}

entity "Source" as src {
    id : int <<generated>>
    --
    gi : int !null <<FK>>
    strain : int !null <<FK>>
    start : int
    end : int
    seq : int unique <<FK>>
}

entity "Strain" as strain {
    id : int <<generated>>
    --
    gbuid : text unique
    name : text !null unique
}

entity "Publications" as pub {
    id : int <<generated>>
    --
		publication : text !null unique
		doi : text unique
}

entity "Source-Publication Assoc" as srcpub {
		source : int !null <<FK>>
		publication : int !null <<FK>>
}

seq::gi --> gi::id
an::gi --> gi::id
gi_type::gi --> gi::id
src::seq --> seq::id
src::gi --> gi::id
src::strain --> strain::id
srcpub::source --> src::id
srcpub::publication --> pub::id
@enduml